--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply plugin: "com.google.gms.google-services" // <-- ADD THIS LINE
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -116,4 +117,16 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    // Firebase BOM (Bill of Materials) to keep versions in sync
+    implementation platform("com.google.firebase:firebase-bom:34.1.0")
+    implementation 'com.google.firebase:firebase-analytics'
+    // Firebase Authentication (for sign-in/sign-up)
+    implementation "com.google.firebase:firebase-auth"
+    
+    // Firestore for database
+    implementation "com.google.firebase:firebase-firestore"
+    implementation("androidx.credentials:credentials:1.3.0")
+    implementation("androidx.credentials:credentials-play-services-auth:1.3.0")
+    implementation("com.google.android.libraries.identity.googleid:googleid:1.1.1")
+
 }
