--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-firebase/app": "^23.0.0",
+    "@react-native-firebase/auth": "^23.0.0",
+    "@react-native-firebase/database": "^23.0.0",
+    "@react-native-firebase/firestore": "^23.0.0",
     "@react-native/new-app-screen": "0.80.2",
+    "firebase": "^12.1.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "react-native-geolocation-service": "^5.3.1"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "^1.25.0",
+    "react-native-phone-number-input": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
