--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,5 +128,8 @@ dependencies {
     implementation("androidx.credentials:credentials:1.3.0")
     implementation("androidx.credentials:credentials-play-services-auth:1.3.0")
     implementation("com.google.android.libraries.identity.googleid:googleid:1.1.1")
+    
+    // Google Play Services Location for react-native-geolocation-service
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
 }
